--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,8 @@
     "options_page": "options.html",
     "background": {
         "scripts": [
+            "scripts/jquery.js",
+            "scripts/jquery.zoomooz.min.js",
             "scripts/background.js"
         ]
     },
@@ -21,7 +23,8 @@
             "16": "images/icon-16.png",
             "19": "images/icon-19.png",
             "38": "images/icon-38.png",
-            "128": "images/icon-128.png"        },
+            "128": "images/icon-128.png"
+        },
         "default_title": "PageZoom",
         "default_popup": "popup.html"
     },
@@ -39,7 +42,6 @@
             ],
             "js": [
                 "scripts/jquery.js",
-                "scripts/jquery.mousewheel.js",
                 "scripts/jquery.zoomooz.min.js",
                 "scripts/injected.js",
                 "scripts/contentscript.js"
@@ -52,6 +54,7 @@
         "tabs",
         "history",
         "storage",
+        "contextMenus",
         "management",
         "http://*/*",
         "https://*/*"
